proxy/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eda-dev
  name: eda-proxy-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
    # Before apply configuration Need add to /etc/hosts $(minikube ip) eda-project.leonov.ru!
  - host: eda-project.leonov.ru
    http:
      paths:
      - path: /order-service
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
